
public class Axis
{
    public const string VERTICAL_AXIS = "Vertical";
    public const string HORIZONTAL_AXIS = "Horizontal";
}

public class Tags
{
    public const string PLAYER_TAG = "Player";
}

public class AnimationTags
{
    public const string WALK_PARAMETER = "Walk";
    public const string DEFEND_PARAMETER = "Defend";
    public const string ATTACK_TRIGGER_1 = "Attack1";
    public const string ATTACK_TRIGGER_2 = "Attack2";
    public const string DANCE_TRIGGER_1 = "Dance1";
    public const string DANCE_TRIGGER_2 = "Dance2";
    public const string DANCE_TRIGGER_3 = "Dance3";
    public const string DANCE_TRIGGER_4 = "Dance4";
    public const string DANCE_TRIGGER_5 = "Dance5";
    public const string DANCE_TRIGGER_6 = "Dance6";
    public const string DANCE_TRIGGER_7 = "Dance7";
}